--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="styles.css">
     <script src="scaleAPI.js"></script>
     <script src="scale.js"></script>
+    <script>
+        scaleHelp();
+    </script>
 </head>
 
-<body onload="scaleHelp();">
+<body>
     <div class="backDiv"></div>
     <h1>Proportional Scale</h1>
     <select id="zoomSelect" onchange="zoomFunc();" title="Zoom level">
