--- a/example.html
+++ b/example.html
@@ -23,6 +23,9 @@
             padding: 8px;
             border-radius: 4px;
         }
+        a{
+            color: #9458DF;
+        }
     </style>
 </head>
 <body>
@@ -30,6 +33,9 @@
         <h1>Welcome to Proportinal Scale</h1>
         <p>
             This API is used to calculate a Proportinal Scale,<br> in order to use it call the function called scaleAPI with 4 parameters,<br> in this order: Original Width, Original Height, New Width and New Height,<br> you can write 0 in the New Width or New Height in order to let the function calculate it.<br><br> for example: <pre>scaleAPI(1920,1080,0,720);</pre><br><br>If you forget how to uses it, you can always call the function: <pre>scaleHelp();</pre>
+            <br><br>
+            <a href="https://adir-sl.github.io/scale">Working Demo</a><br>
+            for more information: <a href="https://github.com/Adir-SL/scale">Project Github Page</a>
         </p>
     </div>
 </body>
