--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Proportional Scale</title>
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <meta property="og:image" content="social.jpg" />
     <script src="scaleAPI.js"></script>
     <script src="scale.js"></script>
     <script>
