--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Proportional Scale</title>
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <meta property="og:url" content="https://adir-sl.github.io/scale" />
     <meta property="og:type" content="article" />
+    <meta property="og:title" content="Proportional Scale" />
+    <meta property="og:description" content="A simple API for calculating Proportional Scale, to see a working demo, please click here" />
     <meta property="og:image" content="https://adir-sl.github.io/scale/social.jpg" />
     <script src="scaleAPI.js"></script>
     <script src="scale.js"></script>
