--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://adir-sl.github.io/scale" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Proportional Scale" />
-    <meta property="og:description" content="A simple API for calculating Proportional Scale, to see a working demo, please click here" />
+    <meta property="og:description" content="A simple API for calculating Proportional Scale, please click here" />
     <meta property="og:image" content="https://adir-sl.github.io/scale/social.jpg" />
     <script src="scaleAPI.js"></script>
     <script src="scale.js"></script>
