--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Proportional Scale</title>
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <meta name="twitter:card" content="Proportional Scale" />
+    <meta name="twitter:site" content="@github" />
+    <meta name="twitter:creator" content="@adircode" />
     <meta property="og:url" content="https://adir-sl.github.io/scale" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Proportional Scale" />
