--- a/example.html
+++ b/example.html
@@ -32,8 +32,7 @@
     <div class="wrapper">
         <h1>Welcome to Proportinal Scale</h1>
         <p>
-            This API is used to calculate a Proportinal Scale,<br> in order to use it call the function called scaleAPI with 4 parameters,<br> in this order: Original Width, Original Height, New Width and New Height,<br> you can write 0 in the New Width or New Height in order to let the function calculate it.<br><br> for example: <pre>scaleAPI(1920,1080,0,720);</pre><br><br>If you forget how to uses it, you can always call the function: <pre>scaleHelp();</pre>
-            <br><br>
+            This API is used to calculate a Proportinal Scale,<br> in order to use it call the function called scaleAPI with 4 parameters,<br> in this order: Original Width, Original Height, New Width and New Height,<br> you can write 0 in the New Width or New Height in order to let the function calculate it.<br>for example: <pre>scaleAPI(1920,1080,0,720);</pre>If you forget how to uses it, you can always call the function: <pre>scaleHelp();</pre>
             <a href="https://adir-sl.github.io/scale">Working Demo</a><br>
             for more information: <a href="https://github.com/Adir-SL/scale">Project Github Page</a>
         </p>
