--- a/example.html
+++ b/example.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Test</title>
     <script src="scaleAPI.js"></script>
     <style>
-        body{
+        body {
             font-family: Arial, Helvetica, sans-serif;
+            margin-left: 44px;
         }
-        h1{
+        h1 {
             color: #9458DF;
             font-weight: bold;
             font-size: 3em;
         }
-        .wrapper{
-            margin-left: 44px;
-        }
-        pre{
+        pre {
             background-color: #dddddd;
             width: fit-content;
             padding: 8px;
             border-radius: 4px;
         }
-        a{
+        a {
             color: #9458DF;
         }
     </style>
 </head>
+
 <body>
-    <div class="wrapper">
-        <h1>Welcome to Proportinal Scale</h1>
-        <p>
-            This API is used to calculate a Proportinal Scale,<br> in order to use it call the function called scaleAPI with 4 parameters,<br> in this order: Original Width, Original Height, New Width and New Height,<br> you can write 0 in the New Width or New Height in order to let the function calculate it.<br>for example: <pre>scaleAPI(1920,1080,0,720);</pre>If you forget how to uses it, you can always call the function: <pre>scaleHelp();</pre>
-            <a href="https://adir-sl.github.io/scale">Working Demo</a><br>
-            for more information: <a href="https://github.com/Adir-SL/scale">Project Github Page</a>
-        </p>
-    </div>
+    <h1>Welcome to Proportinal Scale</h1>
+    <p>
+        This API is used to calculate a Proportinal Scale,<br> in order to use it call the function called scaleAPI with
+        4 parameters,<br> in this order: Original Width, Original Height, New Width and New Height,<br> you can write 0
+        in the New Width or New Height in order to let the function calculate it.<br>for example:
+    <pre>scaleAPI(1920,1080,0,720);</pre>If you forget how to uses it, you can always call the function:
+    <pre>scaleHelp();</pre>
+    <a href="https://adir-sl.github.io/scale">Working Demo</a><br>
+    for more information: <a href="https://github.com/Adir-SL/scale">Project Github Page</a>
+    </p>
 </body>
+
 </html>
