--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +17,6 @@
     <script src="scaleAPI.js"></script>
     <script src="scale.js"></script>
 </head>
-
 <body onload="scaleHelp();">
     <div class="backDiv"></div>
     <h1>Proportional Scale</h1>
@@ -36,17 +34,18 @@
     <div class="wrapper">
         <div class="innerDiv">
             <div class="areaDiv">
-                Width:<input class="input" id="origWidth" type="text" value="400" oninput="resizeFunc(event);" /> Height:<input class="input" id="origHeight" type="text" value="300" oninput="resizeFunc(event);" />
+                Width:<input class="input" id="origWidth" type="text" value="400" oninput="resizeFunc(event);" />
+                Height:<input class="input" id="origHeight" type="text" value="300" oninput="resizeFunc(event);" />
             </div>
             <div class="canvas" id="origDiv"></div>
         </div>
         <div class="innerDiv">
             <div class="areaDiv">
-                New width:<input class="input" id="newWidth" type="text" value="800" oninput="resizeFunc(event);" /> New height:<input class="input" id="newHeight" type="text" value="600" oninput="resizeFunc(event);" />
+                New width:<input class="input" id="newWidth" type="text" value="800" oninput="resizeFunc(event);" /> New
+                height:<input class="input" id="newHeight" type="text" value="600" oninput="resizeFunc(event);" />
             </div>
             <div class="canvas" id="newDiv"></div>
         </div>
     </div>
 </body>
-
 </html>
