Add Github mark & link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="scaleAPI.js"></script>
     <script src="scale.js"></script>
 </head>
-<body onload="scaleHelp();">
+<body onload="scaleHelp();addLogo();">
     <div class="backDiv"></div>
     <h1>Proportional Scale</h1>
     <select id="zoomSelect" onchange="zoomFunc();" title="Zoom level">
