--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="scaleAPI.js"></script>
     <script src="scale.js"></script>
 </head>
-<body onload="scaleHelp();addLogo();">
+<body onload="scaleHelp();">
     <div class="backDiv"></div>
     <h1>Proportional Scale</h1>
     <select id="zoomSelect" onchange="zoomFunc();" title="Zoom level">
@@ -47,5 +47,6 @@
             <div class="canvas" id="newDiv"></div>
         </div>
     </div>
+    <script>addLogo();</script>
 </body>
 </html>
