--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
             <div class="canvas" id="newDiv"></div>
         </div>
     </div>
-    <script>addLogo();</script>
+    <img class='gitLogo' src='github.png'  onclick='gotoGithub();' />
 </body>
 </html>
