--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proportional Scale</title>
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
     <meta name="twitter:card" content="Proportional Scale" />
     <meta name="twitter:site" content="@github" />
     <meta name="twitter:creator" content="@adircode" />
@@ -15,7 +15,7 @@
     <meta property="og:description" content="A simple API for calculating Proportional Scale, see a working demo" />
     <meta property="og:image" content="https://adir-sl.github.io/scale/social_1.jpg" />
     <script src="scaleAPI.js"></script>
-    <script src="scale.js"></script>
+    <script src="index.js"></script>
 </head>
 <body onload="scaleHelp();">
     <div class="backDiv"></div>
