--- a/example.html
+++ b/example.html
@@ -39,6 +39,11 @@
     <a href="https://adir-sl.github.io/scale">Working Demo</a><br>
     for more information: <a href="https://github.com/Adir-SL/scale">Project Github Page</a>
     </p>
+    <script>
+        scaleHelp();
+        scaleAPI(1920,1080,0,720);
+        scaleAPI(1920,1080,1280,0);
+    </script>
 </body>
 
 </html>
