--- a/example.html
+++ b/example.html
@@ -41,8 +41,16 @@
     </p>
     <script>
         scaleHelp();
+        
         scaleAPI(1920,1080,0,720);
         scaleAPI(1920,1080,1280,0);
+
+        /*
+
+        for more information:
+        https://github.com/Adir-SL/scale
+
+        */
     </script>
 </body>
 
