--- a/example.html
+++ b/example.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 
-<body>
+<body onload="scaleHelp();">
     <h1>Welcome to Proportinal Scale</h1>
     <p>
         This API is used to calculate a Proportinal Scale,<br> in order to use it call the function called scaleAPI with
@@ -39,19 +39,6 @@
     <a href="https://adir-sl.github.io/scale">Working Demo</a><br>
     for more information: <a href="https://github.com/Adir-SL/scale">Project Github Page</a>
     </p>
-    <script>
-        scaleHelp();
-        
-        scaleAPI(1920,1080,0,720);
-        scaleAPI(1920,1080,1280,0);
-
-        /*
-
-        for more information:
-        https://github.com/Adir-SL/scale
-
-        */
-    </script>
 </body>
 
 </html>
