Add .gitattributes file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proportional Scale</title>
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="example/index.css">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:site" content="github">
     <meta property="twitter:title" content="Proportional Scale">
@@ -17,7 +17,7 @@
     <meta property="og:description" content="A simple API for calculating Proportional Scale, see a working demo" />
     <meta property="og:image" content="https://adir-sl.github.io/scale/social_1.jpg" />
     <script src="scaleAPI.js"></script>
-    <script src="index.js"></script>
+    <script src="example/index.js"></script>
 </head>
 <body onload="scaleHelp();">
     <div class="backDiv"></div>
