Fixed file structure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="A simple API for calculating Proportional Scale, see a working demo" />
     <meta property="og:image" content="https://adir-sl.github.io/scale/social_1.jpg" />
     <script src="scaleAPI.js"></script>
-    <script src="example/index.js"></script>
+    <script src="index.js"></script>
 </head>
 <body onload="scaleHelp();">
     <div class="backDiv"></div>
