--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
         </div>
     </div>
     <img class='gitLogo' src='github.png' title='Check out ScaleAPI at Github' onclick='gotoGithub();' />
+    <!-- <script src="https://adir-sl.github.io/Visual-Console/vconsole.js"></script> -->
 </body>
 </html>
