--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="canvas" id="newDiv"></div>
         </div>
     </div>
-    <img class='gitLogo' src='github.png' title='Check out ScaleAPI at Github' onclick='gotoGithub();' />
+    <img class='gitLogo' target="_blank" src='github.png' title='Check out ScaleAPI at Github' onclick='gotoGithub();' />
     <!-- <script src="https://adir-sl.github.io/Visual-Console/vconsole.js"></script> -->
 </body>
 </html>
