--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <a href="https://github.com/Adir-SL/scale" target="_blank">
-        <img class='gitLogo' src='github.png' title='Check out ScaleAPI at Github' />
+        <img class='gitLogo' src='github-mark-white.svg' title='Check out ScaleAPI at Github' />
     </a>
     <!-- <script src="https://adir-sl.github.io/Visual-Console/vconsole.js"></script> -->
 </body>
