--- a/example/example.html
+++ b/example/example.html
@@ -11,19 +11,26 @@
             font-family: Arial, Helvetica, sans-serif;
             margin-left: 44px;
         }
+
         h1 {
             color: #9458DF;
             font-weight: bold;
             font-size: 3em;
         }
+
         pre {
             background-color: #dddddd;
             width: fit-content;
             padding: 8px;
             border-radius: 4px;
         }
+
         a {
             color: #9458DF;
+        }
+
+        p {
+            line-height: 1.5;
         }
     </style>
 </head>
