--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
     <div class="backDiv"></div>
     <h1>Proportional Scale</h1>
     <div class="zoomDiv">
-        Zoom level: <button onclick="window.zoom='10';zoomFunc();">10%</button><button
-            onclick="window.zoom='25';zoomFunc();">25%</button><button
-            onclick="window.zoom='50';zoomFunc();">50%</button><button
-            onclick="window.zoom='75';zoomFunc();">75%</button><button
-            onclick="window.zoom='100';zoomFunc();">100%</button><button
-            onclick="window.zoom='150';zoomFunc();">150%</button><button
-            onclick="window.zoom='200';zoomFunc();">200%</button><button
-            onclick="window.zoom='400';zoomFunc();">400%</button><button
-            onclick="window.zoom='1000';zoomFunc();">1000%</button>
+        Zoom level:
+        <button onclick="window.zoom='10';zoomFunc();">10%</button>
+        <button onclick="window.zoom='25';zoomFunc();">25%</button>
+        <button onclick="window.zoom='50';zoomFunc();">50%</button>
+        <button onclick="window.zoom='75';zoomFunc();">75%</button>
+        <button onclick="window.zoom='100';zoomFunc();">100%</button>
+        <button onclick="window.zoom='150';zoomFunc();">150%</button>
+        <button onclick="window.zoom='200';zoomFunc();">200%</button>
+        <button onclick="window.zoom='400';zoomFunc();">400%</button>
+        <button onclick="window.zoom='1000';zoomFunc();">1000%</button>
     </div>
     <div class="wrapper">
         <div class="innerDiv">
