--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="backDiv"></div>
     <h1>Proportional Scale</h1>
     <div class="zoomDiv">
+        <!-- TODO: Refactor this -->
         Zoom level:
         <button class="zoomButton" onclick="resetSelection();window.zoom='10';this.classList.add('selected');zoomFunc();">10%</button>
         <button class="zoomButton" onclick="resetSelection();window.zoom='25';this.classList.add('selected');zoomFunc();">25%</button>
