--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="index.js"></script>
 </head>
 
-<body onload="scaleHelp();">
+<body onload="console.clear();scaleHelp();">
     <div class="backDiv"></div>
     <h1>Proportional Scale</h1>
     <div class="zoomDiv">
