--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="canvas" id="newDiv"></div>
         </div>
     </div>
-    <a href="https://github.com/Adir-SL/scale" target="_blank">
+    <a href="https://github.com/Adir-SL/scale" target="_blank" class="gitLink">
         <img class='gitLogo' src='github-mark-white.svg' title='Check out ScaleAPI at Github' />
     </a>
     <!-- <script src="https://adir-sl.github.io/Visual-Console/vconsole.js"></script> -->
