--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="zoomDiv">
         <!-- TODO: Refactor this -->
         Zoom level:
-        <button class="zoomButton" onclick="resetSelection();window.zoom='10';this.classList.add('selected');zoomFunc();">10%</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">10</button>
         <button class="zoomButton" onclick="resetSelection();window.zoom='25';this.classList.add('selected');zoomFunc();">25%</button>
         <button class="zoomButton" onclick="resetSelection();window.zoom='50';this.classList.add('selected');zoomFunc();">50%</button>
         <button class="zoomButton" onclick="resetSelection();window.zoom='75';this.classList.add('selected');zoomFunc();">75%</button>
