--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <!-- TODO: Refactor this -->
         Zoom level:
         <button class="zoomButton" onclick="zoomButtonFunc(event);">10</button>
-        <button class="zoomButton" onclick="resetSelection();window.zoom='25';this.classList.add('selected');zoomFunc();">25%</button>
-        <button class="zoomButton" onclick="resetSelection();window.zoom='50';this.classList.add('selected');zoomFunc();">50%</button>
-        <button class="zoomButton" onclick="resetSelection();window.zoom='75';this.classList.add('selected');zoomFunc();">75%</button>
-        <button class="zoomButton selected" onclick="resetSelection();window.zoom='100';this.classList.add('selected');zoomFunc();">100%</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">25%</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">50%</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">75%</button>
+        <button class="zoomButton selected" onclick="zoomButtonFunc(event);">100%</button>
         <button class="zoomButton" onclick="resetSelection();window.zoom='150';this.classList.add('selected');zoomFunc();">150%</button>
         <button class="zoomButton" onclick="resetSelection();window.zoom='200';this.classList.add('selected');zoomFunc();">200%</button>
         <button class="zoomButton" onclick="resetSelection();window.zoom='400';this.classList.add('selected');zoomFunc();">400%</button>
