--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <button class="zoomButton" onclick="zoomButtonFunc(event);">50%</button>
         <button class="zoomButton" onclick="zoomButtonFunc(event);">75%</button>
         <button class="zoomButton selected" onclick="zoomButtonFunc(event);">100%</button>
-        <button class="zoomButton" onclick="resetSelection();window.zoom='150';this.classList.add('selected');zoomFunc();">150%</button>
-        <button class="zoomButton" onclick="resetSelection();window.zoom='200';this.classList.add('selected');zoomFunc();">200%</button>
-        <button class="zoomButton" onclick="resetSelection();window.zoom='400';this.classList.add('selected');zoomFunc();">400%</button>
-        <button class="zoomButton" onclick="resetSelection();window.zoom='1000';this.classList.add('selected');zoomFunc();">1000%</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">150%</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">200%</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">400%</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">1000%</button>
     </div>
     <div class="wrapper">
         <div class="innerDiv">
