--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <!-- TODO: Refactor this -->
         Zoom level:
         <button class="zoomButton" onclick="zoomButtonFunc(event);">10</button>
-        <button class="zoomButton" onclick="zoomButtonFunc(event);">25%</button>
-        <button class="zoomButton" onclick="zoomButtonFunc(event);">50%</button>
-        <button class="zoomButton" onclick="zoomButtonFunc(event);">75%</button>
-        <button class="zoomButton selected" onclick="zoomButtonFunc(event);">100%</button>
-        <button class="zoomButton" onclick="zoomButtonFunc(event);">150%</button>
-        <button class="zoomButton" onclick="zoomButtonFunc(event);">200%</button>
-        <button class="zoomButton" onclick="zoomButtonFunc(event);">400%</button>
-        <button class="zoomButton" onclick="zoomButtonFunc(event);">1000%</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">25</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">50</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">75</button>
+        <button class="zoomButton selected" onclick="zoomButtonFunc(event);">100</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">150</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">200</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">400</button>
+        <button class="zoomButton" onclick="zoomButtonFunc(event);">1000</button>
     </div>
     <div class="wrapper">
         <div class="innerDiv">
